samples/_failures_safe/1761153510_8f45f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b8bf13d.c: In function ‘main’:
./samples/SAFE/__tmp_1b8bf13d.c:156:5: error: expected declaration or statement at end of input
  156 |     printf("1. Matrix Addition\n");
      |     ^~~~~~
